# Pong-like-Game

./: CMakeLists.txt  README.md  compile.sh  game
header/: Animation.h  Animation.hpp  Bomb.hpp  Button.hpp  Collider.hpp  GameState.hpp  Player.hpp  collider.h  collider.hpp
images/: button.xcf
images/Explosion images/: fullAnimation.xcf
images/ship/: ship_full.xcf
source/: Animation.cpp  Bomb.cpp  Button.cpp  Collider.cpp  Player.cpp  collider.cpp  main.cpp
